--- a/css/styles.css
+++ b/css/styles.css
@@ -484,6 +484,9 @@ header.black {
   padding-top: var(--spacing-xxxxlarge);
   padding-bottom: var(--spacing-xxxxlarge);
 }
+.padding-xxxxlarge.hero {
+  padding-top: calc(var(--spacing-xxxlarge) - 1.5rem);
+}
 
 .margin-top-xlarge {
   margin-top: var(--spacing-xlarge);
@@ -497,5 +500,9 @@ header.black {
     --spacing-xxlarge: 3.5rem;
     --spacing-xxxlarge: 4rem;
     --spacing-xxxxlarge: 6.5rem;
+  }
+  .padding-xxxxlarge.hero {
+    padding-top: var(--spacing-xxxlarge);
+    padding-bottom: calc(var(--spacing-xxxlarge) + 6rem);
   }
 }/*# sourceMappingURL=styles.css.map */
